# acp-cc-practice

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  TECH_DEBT.md  acp-cc-practice.spec  app_state.py  data_manager.py  env_utils.py  main.py  models.py  pyproject.toml  quiz_engine.py  requirements-dev.txt  requirements.txt  telemetry.py
.github/workflows/: ci.yml
author_tools/: encrypt_questions.py  generate_license.py  keygen.py
data/: questions.enc  questions_meta.json  questions_trial.json
docs/: architecture.md  session_summary_20260630.md  test_coverage_report.md
license/: __init__.py  crypto_utils.py  fingerprint.py  public_key.py  verifier.py
tests/integration/: test_cross_machine.py  test_full_flow.py  test_key_stability.py
tests/unit/: test_data_manager.py  test_encrypt_questions.py  test_fingerprint.py  test_generate_license.py  test_keygen.py  test_main.py  test_main_window.py  test_main_window_ui.py  test_quiz_engine.py  test_ui_smoke.py  test_verifier.py  test_wrong_book.py
ui/: base_mode.py  exam_mode.py  exam_report_dialog.py  exam_session.py  header.py  i18n.py  license_dialog.py  main_window.py  mastery_ring.py  option_row.py  practice_mode.py  practice_panel.py  practice_session.py  review_mode.py  settings_dialog.py  sidebar.py  theme.py  wrong_book.py
