# 项目元数据（TD-25: 添加 pyproject.toml）
[project]
name = "acp-cc-practice"
version = "1.0"
description = "ACP CC 题库练习软件"
requires-python = ">=3.10"
dependencies = [
    "python-docx>=0.8.11,<2.0",
    "cryptography>=41.0.0,<50",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<10.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# TD-17: pytest 配置
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# TD-18: 覆盖率配置
[tool.coverage.run]
source = ["quiz_engine", "data_manager", "env_utils", "license", "author_tools"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]
show_missing = true
